<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
>
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
	    
	    <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"      
             android:textSize="9pt"
             android:paddingRight="4dip"
             android:gravity="center_horizontal"
             android:text="@string/ui_label_date_interval"
             android:background="#595959"
             ></TextView>
	    	    
	    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2"
            >
            <TableRow
            android:paddingTop="8dip"
            android:paddingBottom="8dip"            >            
                <TextView
		              android:layout_width="wrap_content"      
		              android:textSize="7pt"
		              android:paddingRight="4dip"
		            android:text="@string/ui_label_date_from"
		        ></TextView>
		        <TextView
		            android:textSize="7pt"
		            android:id="@+id/newFilterDefinedDateFrom"
		            android:layout_width="fill_parent"		
		            android:text="@string/ui_label_undefined"                              
		            ></TextView>                            
            </TableRow>
         </TableLayout>>	    
	    <TableLayout
	        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            >
            <TableRow>
                <Button 
                    android:layout_weight="1"
                    android:layout_width="0dip"
		            android:id="@+id/buttonSetAbsDateFrom"		            	            	            		            
		            android:text="@string/ui_btn_set_abs_date"    
		        ></Button>
                <Button
                android:layout_weight="1"
                    android:layout_width="0dip" 
                    android:id="@+id/buttonSetRelDateFrom"                                        
                    android:text="@string/ui_btn_set_rel_date"    
                ></Button>
                <Button 
                android:layout_weight="1"
                    android:layout_width="0dip"
                    android:id="@+id/buttonClearDateFrom"                                        
                    android:text="@string/ui_btn_clear_date"    
                ></Button>                            
            </TableRow>
         </TableLayout>
	    
	    <!-- date to -->
	    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2"
            >
            <TableRow
            android:paddingTop="8dip"
            android:paddingBottom="8dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">            
                <TextView
                      android:layout_width="wrap_content"      
                      android:textSize="7pt"
                      android:paddingRight="4dip"
                    android:text="@string/ui_label_date_to"
                ></TextView>
                <TextView
                    android:textSize="7pt"
                    android:id="@+id/newFilterDefinedDateTo"
                    android:layout_width="fill_parent"
                    android:text="@string/ui_label_undefined"                  
                    ></TextView>                            
            </TableRow>
         </TableLayout>        
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            >
            <TableRow>
                <Button 
                    android:id="@+id/buttonSetAbsDateTo"
                    android:layout_weight="1"
                    android:layout_width="0dip"                                      
                    android:text="@string/ui_btn_set_abs_date"    
                ></Button>
                <Button 
                    android:id="@+id/buttonSetRelDateTo"
                    android:layout_weight="1"
                    android:layout_width="0dip"                    
                    android:text="@string/ui_btn_set_rel_date"    
                ></Button>
                <Button 
                    android:id="@+id/buttonClearDateTo"
                    android:layout_weight="1"
                    android:layout_width="0dip"                    
                    android:text="@string/ui_btn_clear_date"    
                ></Button>                            
            </TableRow>
         </TableLayout>

         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"      
             android:textSize="9pt"
             android:paddingRight="4dip"
             android:gravity="center_horizontal"
             android:text="@string/ui_label_conversations"
             android:background="#595959"
             ></TextView>
        
        <TextView
             android:paddingTop="8dip"            
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"      
             android:textSize="7pt"
             android:paddingRight="4dip"
             android:text="@string/ui_label_conversation_sortby"
             ></TextView>

        <RadioGroup
            android:id="@+id/conversationSortBy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        >        
            <RadioButton
                 android:id="@+id/rbConversationSortContact"
	             android:layout_height="wrap_content"
	             android:layout_width="wrap_content"      
	             android:textSize="7pt"	             
	             android:text="@string/ui_label_conversation_sort_contact"
	             android:checked="true"
             ></RadioButton>
             <RadioButton
                 android:id="@+id/rbConversationSortDate"
	             android:layout_height="wrap_content"
	             android:layout_width="wrap_content"      
	             android:textSize="7pt"	             
	             android:text="@string/ui_label_conversation_sort_date"
             ></RadioButton>
        </RadioGroup>
        
        <TextView             
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"      
             android:textSize="7pt"
             android:paddingRight="4dip"
             android:text="@string/ui_label_conversation_sort_order"
             ></TextView>

        <RadioGroup
            android:id="@+id/conversationSortBy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        >        
            <RadioButton
                 android:id="@+id/rbConversationSortAsc"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"     
	             android:textSize="7pt"	             
	             android:text="@string/ui_label_sort_order_asc"
	             android:checked="true"
             ></RadioButton>
             <RadioButton
                android:id="@+id/rbConversationSortDesc"
	             android:layout_height="wrap_content"
	             android:layout_width="fill_parent"      
	             android:textSize="7pt"	             
	             android:text="@string/ui_label_sort_order_desc"
             ></RadioButton>
        </RadioGroup>	    
        
        
        <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"      
             android:textSize="9pt"
             android:paddingRight="4dip"
             android:gravity="center_horizontal"
             android:text="@string/ui_label_messages"
             android:background="#595959"
             ></TextView>
        
        <TextView
             android:paddingTop="8dip"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"      
             android:textSize="7pt"
             android:paddingRight="4dip"
             android:text="@string/ui_label_messages_sort_order"
             ></TextView>

        <RadioGroup
            android:id="@+id/conversationSortBy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        >        
            <RadioButton
                 android:id="@+id/rbMessagesSortAsc"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"      
                 android:textSize="7pt"
                 android:paddingRight="4dip"
                 android:text="@string/ui_label_messages_asc"
                 android:checked="true"
             ></RadioButton>
             <RadioButton
                 android:id="@+id/rbMessagesSortDesc"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"      
                 android:textSize="7pt"
                 android:paddingRight="4dip"
                 android:text="@string/ui_label_messages_desc"
             ></RadioButton>
        </RadioGroup>
        
        <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"      
             android:textSize="9pt"
             android:paddingRight="4dip"
             android:gravity="center_horizontal"
             android:text="@string/ui_label_export_settings"
             android:background="#595959"
             ></TextView>
        
        <TextView
             android:paddingTop="8dip"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"      
             android:textSize="7pt"
             android:paddingRight="4dip"
             android:text="@string/ui_label_export_mode"
             ></TextView>

        <RadioGroup
            android:id="@+id/exportMode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        >        
            <RadioButton
                 android:id="@+id/rbExportRegular"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"      
                 android:textSize="7pt"
                 android:paddingRight="4dip"
                 android:text="@string/ui_label_export_mode_regular"
                 android:checked="true"
             ></RadioButton>
             <RadioButton
                 android:id="@+id/rbExportSimple"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"      
                 android:textSize="7pt"
                 android:paddingRight="4dip"
                 android:text="@string/ui_label_export_mode_simple"
             ></RadioButton>
        </RadioGroup>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            >
            <TableRow>
                <Button 
		            android:id="@+id/buttonApplyFilter"
		            android:layout_weight="1"
                    android:layout_width="0dip"
		            android:text="@string/ui_btn_apply_filter"    
		        ></Button>
		        <Button 
		            android:id="@+id/buttonSaveFilter"
		            android:layout_weight="1"
                    android:layout_width="0dip"
		            android:text="@string/ui_btn_save_filter"    
		        ></Button>
		        <Button 
		            android:id="@+id/buttonCancelFilter"
		            android:layout_weight="1"
                    android:layout_width="0dip"
		            android:text="@string/ui_btn_cancel"    
		        ></Button>                            
            </TableRow>
         </TableLayout>
	</LinearLayout>	
</ScrollView> 