<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"     
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="6dip">
               
     <EditText    
         android:id="@+id/relDateEditBox"     
         android:layout_height="wrap_content"         
         android:layout_width="fill_parent"
         />
     <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip">            
                <TextView
                      android:layout_height="wrap_content"    
                      android:layout_width="wrap_content"      
                      android:textSize="7pt"
                      android:paddingRight="4dip"
                      android:text="@string/ui_label_check"
                      android:textAppearance="@style/checkNone"
                ></TextView>
                <TextView
                    android:textSize="7pt"
                    android:id="@+id/checkRDStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_label_undefined"                  
                    ></TextView>
    </LinearLayout>
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:stretchColumns="*"
            >
            <TableRow>
                <Button 
                    android:id="@+id/buttonSetDialog"
                    android:enabled="false"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="0dip"                                      
                    android:text="@string/ui_btn_set"    
                ></Button>
			     <Button
			        android:id="@+id/buttonCancelDialog"
			        android:layout_weight="1"
			        android:layout_height="wrap_content"
                    android:layout_width="0dip"
			        android:text="@string/ui_btn_cancel"
			     ></Button>                            
            </TableRow>
     </TableLayout>
</LinearLayout>