<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="3dip"
                android:text="@string/ui_label_conversation_submit_filter">
            </TextView>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:numeric="integer"
                android:maxLength="3"
                android:hint="@string/ui_label_conversation_submit_filter_hint"
                android:id="@+id/conversationDaysBack"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/ui_btn_apply"
                android:id="@+id/btnApplyDaysBack"
                />
        </TableRow>
    </TableLayout>

    <!-- separator -->
    <View
                android:layout_height="1px"
                android:layout_width="fill_parent"
                android:background="#DDFFDD"
                android:layout_marginTop="2dip"
                android:layout_marginBottom="2dip"/>
    <ListView
        android:id="@+id/conversationView"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fastScrollEnabled="true"
    />
</LinearLayout>